--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: monospace sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* header styles */
 
 .header-container {
     width: 100%;
-    height: 750px;
+    height: 800px;
     background-image: url('../images/banner/banner3.png');
     text-align: right;
 }
@@ -112,24 +112,76 @@ ul .failure-list {
     color: rgb(102, 102, 102);
 }
 
+/* skills styles */
+
+.skill-section {
+    margin: 100px 200px;
+    padding-top: 50px;
+
+}
+.skill {
+    height: 200px;
+    width: 1150px;
+    background: #9fd0f5e4;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.174);
+    border-radius: 10px;
+    padding: 30px;
+    margin: 100px;
+}
+
+.skill .skill-icon {
+    padding-left:  30px;
+    padding-top: 20px;
+     
+}
+
+.skills-container {
+    display: flex;
+    
+}
+.skill-section .section-title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    
+}
+
+.skill-title {
+    font-size: 25px;
+    font-weight: 500;
+    text-align: left;
+    padding-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.skill-description {
+    text-align: left;
+    padding-left: 30px;
+    padding-right: 20px;
+    
+}
+
 /* advice styles  */
 
 .advice {
-    width: 1200px;
+    width: 1100px;
     height: 300px;
     margin: 80px 200px;
-    background-image: url('../images/watch.png'), url('../images/gradient3.png');
-    background-repeat: no-repeat;
+    background: linear-gradient(to right, rgb(10, 107, 217), rgba(166, 219, 246, 0.222) );
     border-radius: 7px;
+    
 }
 
-.advice-section {
+.advice-section-container {
     padding-top: 70px;
     padding-left: 55px;
-}
+
+} 
 
 .advice-section .section-title {
-    color: aliceblue;
+
+    color: rgb(255, 255, 255);
 }
 
 .btn-secondary {
@@ -147,11 +199,12 @@ ul .failure-list {
 .footer {
     display: flex;
     gap: 20px;
-    /* justify-content: space-around; */
     background: black;
     width: 100%;
     height: 500px;
-    padding-top: 120px;
+    padding-top: 100px;
+
+    
 }
 
 .footer-title {
@@ -161,8 +214,13 @@ ul .failure-list {
     margin-bottom: 10px;
 }
 
+.footer-description-container {
+    font-size: 17px;
+
+}
+
 .footer-description {
-    margin-bottom: 10px;
+    margin-bottom: 16px;
 }
 
 .footer-icon a {
@@ -171,19 +229,55 @@ ul .failure-list {
 }
 
 .footer-icon {
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .contact-info {
-    padding: 120px 250px;
-}
-.contact-info p {
-  color: aliceblue;
+    color: rgb(177, 182, 187);
+    font-size: 18px;
+    padding: 100px 350px 0 200px;
+
 }
 
-.contact-details p{
-    text-decoration: none;
+.contact-info p a {
+  color: aliceblue;
+  text-decoration: none;
+
 }
+
 .subscribing-info {
     margin-right: 70px;
+}
+
+.input-email{
+    color: rgb(250, 250, 250);
+    background: black;
+    border: 1px solid rgb(250, 250, 250);
+    border-radius: 7px;
+    text-align: left;
+    height: 45px;
+    width: 250px;
+    padding: 7px 15px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.subscribing-info h3 {
+    color: rgb(250, 250, 250);
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+
+.btn-tertiary {
+    height: 55px;
+    width: 120px;
+    margin: 20px 0;
+    color: white;
+    background: rgb(4, 73, 123);
+    font-size: 18px;
+    font-weight: 600;
+    border: 0;
+    border-radius: 5px;
 }
