--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,8 @@
 .header-description {
     color: aliceblue;
     font-size: 18px;
-    margin: 0 200px 30px 150px;
+    margin: 0 200px 30px 130px;
+    padding-left: 800px;
 }
 
 .btn-primary {
@@ -115,14 +116,14 @@ ul .failure-list {
 /* skills styles */
 
 .skill-section {
-    margin: 100px 200px;
+    margin: 100px 200px 0 200px;
     padding-top: 50px;
-
 }
+
 .skill {
     height: 200px;
     width: 1150px;
-    background: #9fd0f5e4;
+    background: linear-gradient(to top, rgba(15, 135, 255, 0.734), rgba(210, 240, 252, 0.625));
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.174);
     border-radius: 10px;
     padding: 30px;
@@ -130,20 +131,18 @@ ul .failure-list {
 }
 
 .skill .skill-icon {
-    padding-left:  30px;
+    padding-left: 30px;
     padding-top: 20px;
-     
 }
 
 .skills-container {
     display: flex;
-    
 }
+
 .skill-section .section-title {
     text-align: center;
     font-size: 40px;
     font-weight: 600;
-    
 }
 
 .skill-title {
@@ -159,7 +158,7 @@ ul .failure-list {
     text-align: left;
     padding-left: 30px;
     padding-right: 20px;
-    
+
 }
 
 /* advice styles  */
@@ -167,20 +166,17 @@ ul .failure-list {
 .advice {
     width: 1100px;
     height: 300px;
-    margin: 80px 200px;
-    background: linear-gradient(to right, rgb(10, 107, 217), rgba(166, 219, 246, 0.222) );
+    margin: 50px 200px 110px 200px;
+    background: linear-gradient(to right, rgb(10, 107, 217), rgba(166, 219, 246, 0.222));
     border-radius: 7px;
-    
 }
 
-.advice-section-container {
-    padding-top: 70px;
-    padding-left: 55px;
-
-} 
+.advice-section {
+    padding-top: 55px;
+    padding-left: 70px;
+}
 
 .advice-section .section-title {
-
     color: rgb(255, 255, 255);
 }
 
@@ -203,8 +199,6 @@ ul .failure-list {
     width: 100%;
     height: 500px;
     padding-top: 100px;
-
-    
 }
 
 .footer-title {
@@ -216,7 +210,6 @@ ul .failure-list {
 
 .footer-description-container {
     font-size: 17px;
-
 }
 
 .footer-description {
@@ -225,7 +218,6 @@ ul .failure-list {
 
 .footer-icon a {
     text-decoration: none;
-    
 }
 
 .footer-icon {
@@ -236,20 +228,18 @@ ul .failure-list {
     color: rgb(177, 182, 187);
     font-size: 18px;
     padding: 100px 350px 0 200px;
-
 }
 
 .contact-info p a {
-  color: aliceblue;
-  text-decoration: none;
-
+    color: aliceblue;
+    text-decoration: none;
 }
 
 .subscribing-info {
     margin-right: 70px;
 }
 
-.input-email{
+.input-email {
     color: rgb(250, 250, 250);
     background: black;
     border: 1px solid rgb(250, 250, 250);
